--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.pages %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
