--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <ul>
-  {% for post in site.pages %}
+  {% for page in site.pages %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ page.url }}">{{ page.title }}</a>
     </li>
   {% endfor %}
 </ul>
