--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <ul>
   {% for page in site.pages %}
     <li>
-      <a href="{{ page.url }}">{{ page.title }}</a>
+      <a href="/cours-eie1/{{ page.url }}">{{ page.title }}</a>
     </li>
   {% endfor %}
 </ul>
